# chat-backend

./: README.md  pyproject.toml
src/app/model/: base_model.py  message.py  room_model.py
src/app/services/: redis_naming.py  redis_service.py  room_service.py
src/app/web/room/: room_queries.py
